# jepetrio

./: .gitignore  Originalagent.py  README.md  __init__.py  agent.py  compare_agents.py  compare_result.txt  environment.py  requirements.txt  score_result.txt  test_agent.py  test_block_detection.py  test_perf.py  test_tetrio_score.py  testing.py
tetris_motor/: Cargo.toml  pyproject.toml
tetris_motor/.github/workflows/: CI.yml
tetris_motor/src/: board_utils.rs  heuristics.rs  lib.rs  pieces.rs  search.rs
